added current location

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					    <button type="button" class="navbar-toggle menu-button" data-toggle="collapse" data-target="#myNavbar">
 					        <span class="glyphicon glyphicon-align-justify"></span>
 					    </button>
-      					<a class="navbar-brand logo" href="#">The Alberta Smash Bros Group</a>
+      					<a class="navbar-brand logo" href="#">Super Smash Bros University</a>
     			</div>
 			</div>
 			<div class="col-md-8">
@@ -51,7 +51,7 @@
 		<div class="col-md-12 backg">
 			<div class="col-md-4 col-md-offset-4 inner col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
 				<div class="text-box">
-                	<p class="intro">Alberta Smash Group Presents</p>
+                	<p class="intro">SSBU Presents</p>
                     <h2>Jarrett's Tournament 4</h2>
                     <h3>A Super Smash Bros Melee Charity Event</h3>
                     <!-- <p>By <span><a href="http://www.html5layouts.com">HTML5 Layouts</a></span></p>
@@ -64,7 +64,7 @@
                 <h2>Welcome To Ravalic</h2>
             </div>
             <div class="desc">
-                <p>Ravelic is a free responsive html5 templates released by <a href="http://www.html5templates">HTML5 Layouts</a>. You can use this template for personal as well as commercial purpose but you have to give us a credit link in footer.</p>
+                <p>Super Smash Bros University [SSBU] welcomes everyone to come to our fundraiser Smash Bros tournament for the Autism Society of Edmonton Area in memory of Jarrett "Solaris" Bortscher.</p>
             </div>
 		</div>
 	</div>
@@ -231,33 +231,13 @@
 	<div class="container">
 	<div class="row">
 		<div class="col-md-12 countbg">
-			<div class="col-xs-12 col-sm-3 col-md-3">
-                <div class="counter-item">
-                    <i class="glyphicon glyphicon-cloud"></i>
-                    <div class="timer" data-from="0" data-to="100" data-speed="5000" data-refresh-interval="50"></div>
-                    <h5>Files uploaded</h5>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-3 col-md-3">
-                <div class="counter-item">
-                    <i class="glyphicon glyphicon-check"></i>
-                    <div class="timer" data-from="0" data-to="88" data-speed="5000" data-refresh-interval="50"></div>
-                    <h5>Projects completed</h5>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-3 col-md-3">
-                <div class="counter-item">
-                    <i class="glyphicon glyphicon-console"></i>
-                    <div class="timer" data-from="0" data-to="3297" data-speed="5000" data-refresh-interval="50"></div>
-                    <h5>Lines of code written</h5>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-3 col-md-3">
+			<div class="col-xs-12 col-sm-3 col-md-6">
                 <div class="counter-item">
                     <i class="glyphicon glyphicon-user"></i>
-                    <div class="timer" data-from="0" data-to="86" data-speed="5000" data-refresh-interval="50"></div>
-                    <h5>Happy clients</h5>
+                    <div class="timer" data-from="0" data-to="100" data-speed="5000" data-refresh-interval="50"></div>
+                    <h5>Entrants For The Event</h5>
                 </div>
+            </div>
 			</div>
 		</div>
 	</div>
@@ -287,8 +267,7 @@
 					<div id="map-canvas"></div>
 					<div class="address">
 						<h3>Address</h3>
-						<p><i class="glyphicon glyphicon-map-marker"></i>1234 House Name, City Name, India </p>
-						<p><i class="glyphicon glyphicon-earphone"></i>(111) 123-4567 | (111) 123-7654 (FAX)</p>
+						<p><i class="glyphicon glyphicon-map-marker"></i>The Church at South Edmonton,9910 67 ave NW,T6E 0P5 </p>
 						<p><i class="glyphicon glyphicon-envelope"></i>Info@example.com</p>
 					</div>
 				</div>
@@ -335,7 +314,7 @@
       function initialize() {
         var mapCanvas = document.getElementById('map-canvas');
         var mapOptions = {
-          center: new google.maps.LatLng(26.802100, 75.822739),
+          center: new google.maps.LatLng(53.503698, -113.487486),
           zoom: 8,
           mapTypeId: google.maps.MapTypeId.ROADMAP
         }
