removed notes section, updated footer; mostly just doing a test commit to make sure my workspace is set up properly

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Jarrett's Tournament 4</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/bootstrap.css" rel="stylesheet">
 	<link rel="stylesheet" href="style.css" type="text/css">
 	<link href="css/lightbox.css" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Poppins:400,600,700,500,300' rel='stylesheet' type='text/css'>
@@ -277,27 +277,12 @@
 </div>
 
 
-<div class="container-fluid notes">
-  	<div class="row">
-   		<div class="col-md-12 col-sm-12 col-xs-12 notes-bg">
-    		<div class="container">
-    			<div class="col-md-8 col-sm-8 col-xs-12">
-     				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
-    			</div>
-    			<div class="col-md-offset-1 col-md-2 col-md-offset-1 col-sm-offset-1 col-sm-2 col-sm-offset-1 col-xs-12">
-     				<button type="button" class="btn btn-default btneff">Read More</button>
-    			</div>
-   			</div>
-   		</div>
-  	</div>
-</div>
-
 
 
 <div class="container-fluid footer">
 	<div class="row">
 		<div class="col-md-12">
-			<p>Copyright &copy; Ravalic 2015 By <a href="http://www.html5layouts.com">HTML5 Layouts</a> | <a href="http://vectortoons.com/">Get Vector Graphics</a></p>
+			<p>Built from Ravalic 2015 template provided by <a href="http://www.html5layouts.com">HTML5 Layouts</a></p>
 		</div>
 	</div>
 </div>
