rejiggered the main sections, updated links on the navbar accordingly

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 			<div class="col-md-8">
 				<nav class="collapse navbar-collapse" id="myNavbar" role="navigation">
 					<ul class="nav navbar-nav navbar-right menu">
-							<li><a href="#page-top" class="page-scroll active">Home</a></li>
-							<li><a href="#section2" class="page-scroll">Features</a></li>
-							<li><a href="#work" class="page-scroll">Portfolio</a></li>
+							<li><a href="#page-top" class="page-scroll active">About</a></li>
+							<li><a href="#section2" class="page-scroll">Photos</a></li>
+							<li><a href="#section3" class="page-scroll">Donate</a></li>
 							<li><a href="#section4" class="page-scroll">Contact</a></li>
 					</ul>
 				</nav>
@@ -70,11 +70,87 @@
 	</div>
 </div>
 
-<div class="container-fluid features" id="section2">
+<div class="container-fluid photos" id="section2">
+	<div class="container">
+		<div class="row" id="starts">
+			<div class="col-md-12 col-sm-12 col-xs-12 work-list">
+				<h2 class="text-center photos-text">Photos</h2>
+				<div class="col-md-4 col-sm-6 col-xs-12 work-space">
+					<a href="images/story1.png" data-lightbox="image-1">
+                		<div class="featured-img">
+                			<img src="images/story1.png"/>
+                		</div>
+                		<div class="image-hover">
+                			<i class="glyphicon glyphicon-eye-open"></i>
+						 </div>
+                		<h3>Amazing Beauty</h3>
+                	</a>
+				</div>
+				<div class="col-md-4 col-sm-6 col-xs-12 work-space">
+					<a href="images/story2.png" data-lightbox="image-1">
+                		<div class="featured-img">
+                			<img src="images/story2.png"/>
+                		</div>
+                		<div class="image-hover">
+                			<i class="glyphicon glyphicon-eye-open"></i>
+						 </div>
+                		<h3>Mind Blowing</h3>
+                	</a>
+				</div>
+				<div class="col-md-4 col-sm-6 col-xs-12 work-space">
+					<a href="images/story3.png" data-lightbox="image-1">
+                		<div class="featured-img">
+                			<img src="images/story3.png"/>
+                		</div>
+                		<div class="image-hover">
+                			<i class="glyphicon glyphicon-eye-open"></i>
+						 </div>
+                		<h3>Perfect Shot</h3>
+                	</a>
+				</div>
+				<div class="col-md-4 col-sm-6 col-xs-12 work-space">
+					<a href="images/story2.png" data-lightbox="image-1">
+                		<div class="featured-img">
+                			<img src="images/story2.png"/>
+                		</div>
+                		<div class="image-hover">
+                			<i class="glyphicon glyphicon-eye-open"></i>
+						 </div>
+                		<h3>Creative thoughts</h3>
+                	</a>
+				</div>
+				<div class="col-md-4 col-sm-6 col-xs-12 work-space">
+					<a href="images/story3.png" data-lightbox="image-1">
+                		<div class="featured-img">
+                			<img src="images/story3.png"/>
+                		</div>
+                		<div class="image-hover">
+                			<i class="glyphicon glyphicon-eye-open"></i>
+						 </div>
+                		<h3>Beautiful Picture</h3>
+                	</a>
+				</div>
+				<div class="col-md-4 col-sm-6 col-xs-12 work-space">
+					<a href="images/story1.png" data-lightbox="image-1">
+                		<div class="featured-img">
+                			<img src="images/story1.png"/>
+                		</div>
+                		<div class="image-hover">
+                			<i class="glyphicon glyphicon-eye-open"></i>
+						 </div>
+                		<h3>heart Touching</h3>
+                	</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="container-fluid donate" id="section3">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<h2 class="text-center features-text">Features</h2>
+				<h2 class="text-center donate-text">Donate</h2>
 				<div class="col-md-6 col-sm-12 col-xs-12 icon-box">
 					<div class="col-md-2 col-sm-2 col-xs-12">
 						<div class="iconing">
@@ -151,81 +227,7 @@
 
 
 
-<div class="container-fluid work" id="work">
-	<div class="container">
-		<div class="row" id="starts">
-			<div class="col-md-12 col-sm-12 col-xs-12 work-list">
-				<h2 class="text-center portfolio-text">Portfolio</h2>
-				<div class="col-md-4 col-sm-6 col-xs-12 work-space">
-					<a href="images/story1.png" data-lightbox="image-1">
-                		<div class="featured-img">
-                			<img src="images/story1.png"/>
-                		</div>
-                		<div class="image-hover">
-                			<i class="glyphicon glyphicon-eye-open"></i>
-						 </div>
-                		<h3>Amazing Beauty</h3>
-                	</a>
-				</div>
-				<div class="col-md-4 col-sm-6 col-xs-12 work-space">
-					<a href="images/story2.png" data-lightbox="image-1">
-                		<div class="featured-img">
-                			<img src="images/story2.png"/>
-                		</div>
-                		<div class="image-hover">
-                			<i class="glyphicon glyphicon-eye-open"></i>
-						 </div>
-                		<h3>Mind Blowing</h3>
-                	</a>
-				</div>
-				<div class="col-md-4 col-sm-6 col-xs-12 work-space">
-					<a href="images/story3.png" data-lightbox="image-1">
-                		<div class="featured-img">
-                			<img src="images/story3.png"/>
-                		</div>
-                		<div class="image-hover">
-                			<i class="glyphicon glyphicon-eye-open"></i>
-						 </div>
-                		<h3>Perfect Shot</h3>
-                	</a>
-				</div>
-				<div class="col-md-4 col-sm-6 col-xs-12 work-space">
-					<a href="images/story2.png" data-lightbox="image-1">
-                		<div class="featured-img">
-                			<img src="images/story2.png"/>
-                		</div>
-                		<div class="image-hover">
-                			<i class="glyphicon glyphicon-eye-open"></i>
-						 </div>
-                		<h3>Creative thoughts</h3>
-                	</a>
-				</div>
-				<div class="col-md-4 col-sm-6 col-xs-12 work-space">
-					<a href="images/story3.png" data-lightbox="image-1">
-                		<div class="featured-img">
-                			<img src="images/story3.png"/>
-                		</div>
-                		<div class="image-hover">
-                			<i class="glyphicon glyphicon-eye-open"></i>
-						 </div>
-                		<h3>Beautiful Picture</h3>
-                	</a>
-				</div>
-				<div class="col-md-4 col-sm-6 col-xs-12 work-space">
-					<a href="images/story1.png" data-lightbox="image-1">
-                		<div class="featured-img">
-                			<img src="images/story1.png"/>
-                		</div>
-                		<div class="image-hover">
-                			<i class="glyphicon glyphicon-eye-open"></i>
-						 </div>
-                		<h3>heart Touching</h3>
-                	</a>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
+
 
 <div class="container-fluid countspace">
 	<div class="container">
@@ -248,7 +250,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<h2 class="text-center portfolio-text">Contact</h2>
+				<h2 class="text-center contact-text">Contact</h2>
 				<div class="col-md-6 col-sm-12 col-xs-12contact-form">
 					<form role="form">
                         <div class="form-group">
@@ -275,7 +277,6 @@
 		</div>
 	</div>
 </div>
-
 
 
 
