--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	<![endif]-->
 
 	<style>
+	/* TEMPORARY STYLE STUFF... MERGE THESE IN WITH style.css LATER */
+
 	/*.container-fluid {
 	border: 3px solid red;
 }
@@ -33,7 +35,21 @@ border: 3px solid blue;
 }
 .photos-text {
 border: 2px solid magenta;
-}*/
+}
+.col-md-6 {
+	border: 2px solid magenta;
+}
+.counter-item {
+	border: 2px solid blue;
+} */
+
+.twitchplayer iframe {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 600px;
+	height: 400px; /* TODO: figure out how to resize twitch player properly */
+}
 .photos
 {
 	background: #ff9933;
@@ -66,6 +82,52 @@ border: 2px solid magenta;
 	width: 100%;
 	height: auto;
 }
+
+.about-text
+{
+	font-family: 'Roboto', sans-serif;
+	font-weight: 700;
+	letter-spacing: 5px;
+	margin-bottom:30px;
+	margin-top:30px;
+}
+h2.about-text::after {
+    display: block;
+    margin: 17px auto 0px;
+    width: 80px;
+    height: 1px;
+    background: #000 none repeat scroll 0% 0%;
+    content: "";
+}
+
+.counter-text {
+	font-family: 'Verdana', sans-serif;
+	font-weight: 1000;
+}
+
+.value
+{
+		color: #8ab839;
+		text-align: center;
+		float: left;
+		background: white;
+}
+.desc h4
+{
+	display: inline;
+	font-family: 'Poppins', sans-serif;
+	font-weight: 600;
+	text-transform: uppercase;
+	color: #000;
+	font-size: 14px;
+}
+.desc ul {
+	width: 75%;
+	margin: 10px auto 20px auto;
+	font-family: 'Poppins', sans-serif;
+	font-size: 14px;
+}
+
 
 </style>
 </head>
@@ -111,12 +173,35 @@ border: 2px solid magenta;
 					</div>
 				</div>
 			</div>
-			<div class="col-md-12 some-notes">
-				<div class="title">
-					<h2>Welcome To Ravalic</h2>
-				</div>
-				<div class="desc">
+			<div class="col-md-12 col-sm-12 col-xs-12 about">
+				<h2 class="text-center about-text">About</h2>
+				<div class="col-md-6 col-sm-12 col-xs-12 desc">
 					<p>Super Smash Bros University [SSBU] welcomes everyone to come to our fundraiser Smash Bros tournament for the Autism Society of Edmonton Area in memory of Jarrett "Solaris" Bortscher.</p>
+						<ul>
+							<li><h4>When:</h4> March 12, 2016
+							<li><h4>Where:</h4> The Church at South Edmonton - 9910 67 Ave NW, T6E 0P5
+							<li><h4>Game:</h4> Super Smash Bros. Melee
+						</ul>
+					<p>Super Smash Bros University [SSBU] welcomes everyone to come to our fundraiser Smash Bros tournament for the Autism Society of Edmonton Area in memory of Jarrett "Solaris" Bortscher.</p>
+					<div class="col-md-6 col-sm-6 col-xs-12 value">
+						<div class="counter-item">
+							<i class="glyphicon glyphicon-usd"></i>
+							<!-- TODO: determine whether we want the count up effect-->
+							<h1 class="counter-text">4,000</h1>
+							<h5>Raised from prior events</h5>
+						</div>
+					</div>
+					<div class="col-md-6 col-sm-6 col-xs-12 value">
+						<div class="counter-item">
+							<i class="glyphicon glyphicon-user"></i>
+							<!-- TODO: determine whether we want the count up effect, dynamically pull this from Facebook?-->
+							<h1 class="counter-text">120</h1>
+							<h5>Expected entrants for JT4</h5>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-sm-12 col-xs-12 twitchplayer">
+					<iframe src="http://player.twitch.tv/?channel=firedragon764&!muted&!autoplay" allowfullscreen></iframe>
 				</div>
 			</div>
 		</div>
@@ -130,9 +215,7 @@ border: 2px solid magenta;
 					<h2 class="text-center photos-text">Photos</h2>
 
 					<div class="col-md-12 col-sm-12 col-xs-12">
-						<div class="col-md-4 col-sm-4 col-xs-4">
-						</div>
-						<div class="col-md-8 col-sm-8 col-xs-8">
+						<div class="col-md-offset-4 col-sm-offset-4 col-xs-offset-4 col-md-8 col-sm-8 col-xs-8">
 							<div id="photos-maincaption">
 								<h3><i>Loading caption...</i></h3>
 							</div>
@@ -295,6 +378,17 @@ border: 2px solid magenta;
 	</div>
 
 
+
+
+
+
+
+
+
+
+
+
+
 <!-- ******************************* SCRIPTS ******************************* -->
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -420,6 +514,7 @@ border: 2px solid magenta;
 	}
 
 	/* update the main image and the caption */
+	/* NOTE: this doesn't work locally on Chrome due (presumably) to cross-domain security issues, but it seems to work after uploaded */
 	function updateImage(id) {
 		var xmlreq = new XMLHttpRequest();
 		xmlreq.onreadystatechange = function() {
