reverted changes to bootstrap.css (it is now unchanged from original version, outside of whitespace); moved changes to overriding style in index.html instead

--- a/index.html
+++ b/index.html
@@ -149,6 +149,19 @@ h2.history-text::after {
     content: "";
 }
 
+.thumbnail {
+  display: block;
+  padding: 3px;
+	margin-bottom: 0px;
+  line-height: 1.42857143;
+  background-color: #f93;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  -webkit-transition: border .2s ease-in-out;
+  -o-transition: border .2s ease-in-out;
+  transition: border .2s ease-in-out;
+}
+
 </style>
 </head>
 <body>
