moved history to 2nd section; changed title of register/donate to participate

--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@ h2.history-text::after {
 					<nav class="collapse navbar-collapse" id="myNavbar" role="navigation">
 						<ul class="nav navbar-nav navbar-right menu">
 							<li><a href="#page-top" class="page-scroll active">Event Info</a></li>
-							<li><a href="#section2" class="page-scroll">Register/Donate</a></li>
-							<li><a href="#section3" class="page-scroll">History</a></li>
+							<li><a href="#section2" class="page-scroll">History</a></li>
+							<li><a href="#section3" class="page-scroll">Participate</a></li>
 							<li><a href="#section4" class="page-scroll">Photos</a></li>
 							<li><a href="#section5" class="page-scroll">Contact</a></li>
 						</ul>
@@ -224,13 +224,93 @@ h2.history-text::after {
 		</div>
 	</div>
 
+
+
+
+		<!-- HISTORY SECTION -->
+		<div class="container-fluid history" id="section2">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<h2 class="text-center history-text">History</h2>
+						<div class="col-md-6 col-sm-12 col-xs-12 icon-box">
+							<div class="col-md-2 col-sm-2 col-xs-12">
+								<div class="iconing">
+									<i class="glyphicon glyphicon-pencil"></i>
+								</div>
+							</div>
+							<div class="col-md-9 col-md-offset-1 col-sm-10 col-xs-12 icon-text-box">
+								<h4>Modern Design</h4>
+								<p>Lorem ipsum dolor sit amet, consectetur elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							</div>
+						</div>
+						<div class="col-md-6 col-sm-12 col-xs-12 icon-box">
+							<div class="col-md-2 col-sm-2 col-xs-12">
+								<div class="iconing">
+									<i class="glyphicon glyphicon-cog"></i>
+								</div>
+							</div>
+							<div class="col-md-9 col-md-offset-1 col-sm-10 col-xs-12 icon-text-box">
+								<h4>Easy To Customize</h4>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							</div>
+						</div>
+						<div class="col-md-6 col-sm-12 col-xs-12 icon-box">
+							<div class="col-md-2 col-sm-2 col-xs-12">
+								<div class="iconing">
+									<i class="glyphicon glyphicon-time"></i>
+								</div>
+							</div>
+							<div class="col-md-9 col-md-offset-1 col-sm-10 col-xs-12 icon-text-box">
+								<h4>Save Time</h4>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, adipiscing elit.</p>
+							</div>
+						</div>
+						<div class="col-md-6 col-sm-12 col-xs-12 icon-box">
+							<div class="col-md-2 col-sm-2 col-xs-12">
+								<div class="iconing">
+									<i class="glyphicon glyphicon-briefcase"></i>
+								</div>
+							</div>
+							<div class="col-md-9 col-md-offset-1 col-sm-10 col-xs-12 icon-text-box">
+								<h4>Professional Work</h4>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit.</p>
+							</div>
+						</div>
+						<div class="col-md-6 col-sm-12 col-xs-12 icon-box">
+							<div class="col-md-2 col-sm-2 col-xs-12">
+								<div class="iconing">
+									<i class="glyphicon glyphicon-user"></i>
+								</div>
+							</div>
+							<div class="col-md-9 col-md-offset-1 col-sm-10 col-xs-12 icon-text-box">
+								<h4>User-friendly Interface</h4>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit.</p>
+							</div>
+						</div>
+						<div class="col-md-6 col-sm-12 col-xs-12 icon-box">
+							<div class="col-md-2 col-sm-2 col-xs-12">
+								<div class="iconing">
+									<i class="glyphicon glyphicon-heart"></i>
+								</div>
+							</div>
+							<div class="col-md-9 col-md-offset-1 col-sm-10 col-xs-12 icon-text-box">
+								<h4>Made With Love</h4>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	<!-- REGISTER/DONATE SECTION -->
-	<div class="container-fluid register" id="section2">
+	<div class="container-fluid register" id="section3">
 		<div class="container">
 			<div class="row" id="starts">
 				<div class="col-md-12">
 					<!-- TODO: decide on title for this section -->
-					<h2 class="text-center register-text">Register / Donate</h2>
+					<h2 class="text-center register-text">Participate</h2>
 					<div class="col-md-4 col-sm-12 col-xs-12 icon-box">
 						<div class="col-md-2 col-sm-2 col-xs-12">
 							<div class="iconing">
@@ -279,83 +359,6 @@ h2.history-text::after {
 	</div>
 
 
-
-	<!-- HISTORY SECTION -->
-	<div class="container-fluid history" id="section3">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<h2 class="text-center history-text">History</h2>
-					<div class="col-md-6 col-sm-12 col-xs-12 icon-box">
-						<div class="col-md-2 col-sm-2 col-xs-12">
-							<div class="iconing">
-								<i class="glyphicon glyphicon-pencil"></i>
-							</div>
-						</div>
-						<div class="col-md-9 col-md-offset-1 col-sm-10 col-xs-12 icon-text-box">
-							<h4>Modern Design</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						</div>
-					</div>
-					<div class="col-md-6 col-sm-12 col-xs-12 icon-box">
-						<div class="col-md-2 col-sm-2 col-xs-12">
-							<div class="iconing">
-								<i class="glyphicon glyphicon-cog"></i>
-							</div>
-						</div>
-						<div class="col-md-9 col-md-offset-1 col-sm-10 col-xs-12 icon-text-box">
-							<h4>Easy To Customize</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						</div>
-					</div>
-					<div class="col-md-6 col-sm-12 col-xs-12 icon-box">
-						<div class="col-md-2 col-sm-2 col-xs-12">
-							<div class="iconing">
-								<i class="glyphicon glyphicon-time"></i>
-							</div>
-						</div>
-						<div class="col-md-9 col-md-offset-1 col-sm-10 col-xs-12 icon-text-box">
-							<h4>Save Time</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, adipiscing elit.</p>
-						</div>
-					</div>
-					<div class="col-md-6 col-sm-12 col-xs-12 icon-box">
-						<div class="col-md-2 col-sm-2 col-xs-12">
-							<div class="iconing">
-								<i class="glyphicon glyphicon-briefcase"></i>
-							</div>
-						</div>
-						<div class="col-md-9 col-md-offset-1 col-sm-10 col-xs-12 icon-text-box">
-							<h4>Professional Work</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit.</p>
-						</div>
-					</div>
-					<div class="col-md-6 col-sm-12 col-xs-12 icon-box">
-						<div class="col-md-2 col-sm-2 col-xs-12">
-							<div class="iconing">
-								<i class="glyphicon glyphicon-user"></i>
-							</div>
-						</div>
-						<div class="col-md-9 col-md-offset-1 col-sm-10 col-xs-12 icon-text-box">
-							<h4>User-friendly Interface</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit.</p>
-						</div>
-					</div>
-					<div class="col-md-6 col-sm-12 col-xs-12 icon-box">
-						<div class="col-md-2 col-sm-2 col-xs-12">
-							<div class="iconing">
-								<i class="glyphicon glyphicon-heart"></i>
-							</div>
-						</div>
-						<div class="col-md-9 col-md-offset-1 col-sm-10 col-xs-12 icon-text-box">
-							<h4>Made With Love</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 
 
 	<!-- PHOTOS SECTION -->
